Added FileStorageProvider to service

--- a/code/backend/portal.Service/portal.Service.csproj
+++ b/code/backend/portal.Service/portal.Service.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\portal.IO.Provider.FileStorage\portal.IO.csproj" />
+  </ItemGroup>
+
 </Project>
