--- a/code/backend/portal.Service/appsettings.json
+++ b/code/backend/portal.Service/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FileStorageProvider": {
+    "Path": "c:\\temp"
+  }
 }
