Added Identity - Security

--- a/code/backend/portal.Service/appsettings.json
+++ b/code/backend/portal.Service/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=JournalPortal;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,5 +11,10 @@
   "AllowedHosts": "*",
   "FileStorageProvider": {
     "Path": "c:\\temp"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:7062",
+    "Secret": "VeryHighlySecuredSecret"
   }
 }
