--- a/code/backend/portal.Service/portal.Service.csproj
+++ b/code/backend/portal.Service/portal.Service.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.14" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.14" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,6 +19,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\portal.IO.Provider.FileStorage\portal.IO.csproj" />
+    <ProjectReference Include="..\portal.Security.Identity\portal.Security.Identity.csproj" />
   </ItemGroup>
-
 </Project>
