--- a/code/backend/portal.Service/portal.Service.csproj
+++ b/code/backend/portal.Service/portal.Service.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\portal.Domain\portal.Domain.csproj" />
-    <ProjectReference Include="..\portal.IO.Provider.FileStorage\portal.IO.csproj" />
+    <ProjectReference Include="..\portal.IO\portal.IO.csproj" />
     <ProjectReference Include="..\portal.Security.Identity\portal.Security.Identity.csproj" />
     <ProjectReference Include="..\portal.WebAPI\portal.WebAPI.csproj" />
   </ItemGroup>
