--- a/code/backend/portal.UnitTest/portal.UnitTest.csproj
+++ b/code/backend/portal.UnitTest/portal.UnitTest.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.14" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -24,6 +26,7 @@
     <ProjectReference Include="..\portal.IO.Common\portal.IO.Common.csproj" />
     <ProjectReference Include="..\portal.IO\portal.IO.csproj" />
     <ProjectReference Include="..\portal.Security\portal.Security.csproj" />
+    <ProjectReference Include="..\portal.Service\portal.Service.csproj" />
   </ItemGroup>
 
   <ItemGroup>
